--- a/.env
+++ b/.env
@@ -29,5 +29,7 @@ APP_SECRET=215a2b224cf6b8c4d512cea675dd9570
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+# DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://db_user:db_password@db:3306/db_name?serverVersion=5.7
+MAILER_DSN=smtp://localhost
 ###< doctrine/doctrine-bundle ###
