--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/expression-language": "5.1.*",
-        "symfony/flex": "^1.3.1",
+        "symfony/flex": "^1.13",
         "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
         "symfony/http-client": "5.1.*",
@@ -54,7 +54,11 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/flex": true,
+            "composer/package-versions-deprecated": true
+        }
     },
     "autoload": {
         "psr-4": {
